--- a/src/chat.html
+++ b/src/chat.html
@@ -5,7 +5,7 @@
         <style>
             body { margin: 0; padding-bottom: 3rem; font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif; }
       
-            #form { background:rgba(0, 0, 0, 0.15); padding: 0.25rem; position: fixed; bottom: 0; left: 0; right: 0; display: flex; height: 3rem; box-sizing: border-box; backdrop-filter: blur(10px); }
+            #form { background:rgba(187, 122, 122, 0.15); padding: 0.25rem; position: fixed; bottom: 0; left: 0; right: 0; display: flex; height: 3rem; box-sizing: border-box; backdrop-filter: blur(10px); }
             #input { border: none; padding: 0 1rem; flex-grow: 1; border-radius: 2rem; margin: 0.25rem; }
             #input:focus { outline: none; }
             #form > button { background: #333; border: none; padding: 0 1rem; margin: 0.25rem; border-radius: 3px; outline: none; color: #fff; }
@@ -15,6 +15,7 @@
             #messages > li:nth-child(odd) { background: #efefef; }
         </style>
     </head>
+
     <body>
         <ul id="messages"></ul>
         <form id="form" action="">
@@ -23,9 +24,11 @@
         </form>
 
         <script src="/socket.io/socket.io.js"></script>
+        
         <script>
-            var socket = io();
 
+            console.log("hello");
+            var socket = io();
             var messages = document.getElementById('messages');
             var form = document.getElementById('form');
             var input = document.getElementById('input');
